# dsml-ai

./: .condarc  .gitignore  AGENTS.md  DEPENDENCIES.txt  Makefile  README.md  environment.yml  pyproject.comprehensive.toml  pyproject.minimal.toml  pyproject.toml  pytest.ini
.virtual_documents/: dsml.ipynb
notebooks/: dsml.ipynb
src/dsml_ai/: __init__.py  bayes.py  core.py  dl.py  stats.py  time.py  viz.py
tests/: test_bayes.py  test_core.py  test_dl.py  test_init.py  test_stats.py  test_time.py  test_viz.py
