[project]
name = "dsml-ai"
version = "0.1.0"
description = "DS + ML playground with modular stacks"
authors = [
    {name = "pitcany",email = "pitcany@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# --- Core scientific stack (always installed) ---
numpy = "<2.0"
pandas = "^2.2"
scipy = "^1.12"
scikit-learn = "^1.4"
matplotlib = "^3.8"
seaborn = "^0.12"
jupyterlab = "^4.0"
notebook = "^7.0"
ipykernel = "^6.29"

# -------------------------------------------------
# Other dependencies
# -------------------------------------------------

# # Deep Learning (choose one set)
# torch = "2.2.2"
# torchvision = "0.17.2"
# torchaudio = "2.2.2"
# # tensorflow = { version = "2.16", optional = true }
# # jax = { version = "0.4.28", extras = ["cpu"], optional = true }
# flax = "^0.8"
# optax = "^0.2"

# xgboost = "^2.0"
# lightgbm = "^4.3"
# catboost = "^1.2"

# pymc = "^5.10"
# numpyro = "^0.14"
# cmdstanpy = "^1.2"
# arviz = "^0.17"

# transformers = { version = "^4.44", extras = ["torch"] }
# datasets = "^3.0"
# tokenizers = "^0.20"
# spacy = "^3.7"
# sentencepiece = "^0.2"

# timm = "^1.0"
# opencv-python = "^4.10"
# # detectron2, mmcv, mmdet → research extras, can add later

# statsmodels = "^0.14"
# darts = "^0.30"
# # kats = "^0.3"
# prophet = "^1.1"

# optuna = "^3.6"
# ray = { version = "^2.36", extras = ["default"] }
# mlflow = "^2.17"
# onnxruntime = "^1.20"

# pytest = "^8.0"
# black = "^24.0"
# ruff = "^0.6"
autogluon = "^1.4.0"
sortedcontainers = "^2.4.0"
pyllist = "^0.3"
llist = "^0.7.1"
cvxpy = "^1.7.3"
gurobipy = "^12.0.3"
pytest = "^8.4.2"
black = "^25.9.0"
cmdstanpy = "^1.2.5"

[tool.poetry]
package-mode = false