[tool.poetry]
name = "dsml"
version = "0.1.0"
description = "Heavy-duty data science and ML workflows"
authors = ["Yannik Pitcan <pitcany@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
pandas = "^2.2"
scipy = "^1.14"
scikit-learn = "^1.5"
hydra-core = "^1.3"
pydantic = "^2.8"
torch = "*"
torchvision = "*"
torchaudio = "*"
matplotlib = "^3.9"
seaborn = "^0.13"
mlflow = "^2.16"
wandb = "^0.17"
xgboost = "^2.1"
catboost = "^1.2"
lightgbm = "^4.5"
loguru = "^0.7"
structlog = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^24.4"
ruff = "^0.6"
isort = "^5.13"
mypy = "^1.11"
pre-commit = "^3.8"
nbstripout = "^0.6"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = ["E501"]
fix = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
strict = false
